# cubesgame2

./: .gitignore  README.md  main.py  pyproject.toml
